--- a/app/src/main/res/layout/fragment_item_details.xml
+++ b/app/src/main/res/layout/fragment_item_details.xml
@@ -1,26 +1,46 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_content_movie_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <LinearLayout
+        <com.enpassio.foodie.util.VerticalTextView
+            android:layout_width="24dp"
+            android:layout_height="200dp"
+            android:background="@color/colorPrimaryDark"
+            android:gravity="center_horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:rotation="180"
+            android:text="Ingredients"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/ingredientTextView"
             android:layout_width="match_parent"
-            android:layout_height="180dp">
+            android:layout_height="200dp"
+            android:gravity="start|center_vertical"
+            android:padding="2dp"
+            android:paddingLeft="16dp"
+            android:textColor="#000000"
+            android:textSize="14sp"
+            android:textStyle="italic|normal" />
 
-            <include layout="@layout/ingredients" />
-        </LinearLayout>
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
     </LinearLayout>
-</ScrollView>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="false"
+        android:fitsSystemWindows="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
+</LinearLayout>
