--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -2,15 +2,31 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginBottom="8dp"
+    android:orientation="vertical"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
+    android:paddingTop="2dp">
 
-    <ImageView
-        android:id="@+id/imageMenuItem"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp" />
+        android:layout_height="wrap_content"
+        android:background="#f4ff8a"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textMenuItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/imageMenuItem"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:id="@+id/textMenuItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
+            android:padding="8dp"
+            android:textColor="#000000"
+            android:textSize="24sp" />
+    </LinearLayout>
 </android.support.v7.widget.CardView>
