--- a/app/src/main/res/layout/steps.xml
+++ b/app/src/main/res/layout/steps.xml
@@ -1,34 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/stepsCardView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#bfd859"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/stepsLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#dae"
-        android:orientation="vertical">
+        android:background="#bfd859"
+        android:orientation="vertical"
+        android:paddingBottom="4dp">
+
+        <TextView
+            android:id="@+id/shortDescription"
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:maxLines="1"
+            android:padding="2dp"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
             android:id="@+id/player"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:padding="4dp"
+            android:layout_height="208dp"
+            android:background="#8ca727"
+            android:paddingRight="2dp"
             android:visibility="visible"
             app:fastforward_increment="30000"
             app:resize_mode="fill"
             app:rewind_increment="30000" />
 
-        <TextView
-            android:id="@+id/shortDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/description"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
+            android:padding="2dp"
+            android:textColor="#000000"
+            android:textSize="14sp" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
