added scrollview for handling landscape orientation in details fragment

--- a/app/src/main/res/layout-sw600dp/fragment_menu.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_menu.xml
@@ -14,7 +14,7 @@
         android:id="@+id/menuDetailFrame"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="4dp"
+        android:layout_marginLeft="@dimen/padding_4dp"
         android:layout_weight="1"
-        android:background="#8ca727" />
+        android:background="@color/menu_details_frame_background" />
 </LinearLayout>
