--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -2,22 +2,22 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
+    android:layout_marginBottom="@dimen/padding_8dp"
     android:orientation="vertical"
-    android:paddingLeft="2dp"
-    android:paddingRight="2dp"
-    android:paddingTop="2dp">
+    android:paddingLeft="@dimen/padding_2dp"
+    android:paddingRight="@dimen/padding_2dp"
+    android:paddingTop="@dimen/padding_2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#f4ff8a"
+        android:background="@color/item_menu_linear_layout_background"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageMenuItem"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="@dimen/menu_item_image_height"
             android:scaleType="centerCrop" />
 
         <TextView
@@ -25,8 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
-            android:padding="8dp"
-            android:textColor="#000000"
-            android:textSize="24sp" />
+            android:padding="@dimen/text_menu_item_text_padding"
+            android:textColor="@color/text_color_black"
+            android:textSize="@dimen/text_menu_item_text_size" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
