--- a/app/src/main/res/xml/recipe_widget_info.xml
+++ b/app/src/main/res/xml/recipe_widget_info.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:configure="com.enpassio.foodie.AppWidgetConfigure"
     android:initialKeyguardLayout="@layout/recipe_widget"
     android:initialLayout="@layout/recipe_widget"
-    android:minHeight="40dp"
-    android:minWidth="40dp"
+    android:minHeight="200dp"
+    android:minWidth="200dp"
     android:previewImage="@mipmap/ic_launcher_round"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000"
